# SandboxGaem

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  SideScrollerSandbox  SideScrollerSandbox.cbp  cmake_install.cmake  jamerrorlog.txt  location.sav  main.c  player.sav  run.sh
assets/: IndustrialTilesetSprite.tsx  dialogue.txt  game.ini  level0.tmx  room.tmx
assets/raw/: backgroundtiles.ase  concept.ase  dirtblock.ase  dirttileset.ase  forefronttiles.ase  foregroundtiles.aseprite  industrialblock.ase  industrialtileset.ase  industrypalette.aseprite  playermove.ase  playerstand.ase  skellyman.ase  skellymanrunning.ase  woodblock.ase  woodtileset.ase
assets/tiled/: DirtTilesetSprite.tsx  IndustrialTilesetSprite.tsx
assets/tmx/: BackgroundTilesSprite.tsx  DirtTilesetSprite.tsx  Entities.tsx  ForefrontTilesSprite.tsx  ForegroundTilesSprite.tsx  IndustrialTilesetSprite.tsx  Overworld1.tmx  StartingWorld.tmx  WoodTilesetSprite.tsx
include/: Character.h  Enemies.h  EntityBehaviour.h  EntityCommon.h  Levels.h  Message.h  Player.h  SandConstants.h
src/: BasicEnemy.c  Character.c  EnemyCommon.c  EntityCommon.c  Levels.c  Message.c  Player.c  SkellyMan.c
